--- a/app/views/templates/index.html
+++ b/app/views/templates/index.html
@@ -1,13 +1,17 @@
 {{ define "content" }}
 <h1>Sample TodoApp</h1>
 
-<p>[<a href="/todos/new">Create</a>]</p>
+<a href="/todos/new"> <div class="mx-2 btn btn-outline-success btn-sm">Create</div></a>
 <hr>
 
 {{ range .Todos }}
-<div>{{ .Content }}</div>
-<p>[<a href="/todos/edit/{{.ID}}">Edit</a>]</p>
-<p>[<a href="/todos/delete/{{.ID}}">Delete</a>]</p>
+<div class="content">
+  <div class="row align-items-center justify-content-center">
+    <div class="mx-2">{{ .Content }}</div>
+    <a href="/todos/edit/{{.ID}}"><div class="mx-2 btn btn-outline-primary btn-sm">Edit</div></a>
+    <a href="/todos/delete/{{.ID}}"><div class="mx-2 btn btn-outline-danger btn-sm">Delete</div></a>
+  </div>
+</div>
 <hr>
 {{end}}
 {{end}}
