--- a/app/views/templates/public_navbar.html
+++ b/app/views/templates/public_navbar.html
@@ -1,7 +1,20 @@
 {{ define "navbar" }}
-<div class="container">
-    <a href="/">top</a>
-    <a href="/signup">signup</a>
-    <a href="/login">login</a>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+      <a class="navbar-brand" href="/top">Home</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link" href="/signup">Signup</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/login">Login</a>
+              </li>
+          </ul>
+      </div>
+  </div>
+</nav>
 {{end}}
